--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Vendor\\IndexJs\\": "src/"
+            "App\\": "app/"
+        
         }
     },
     "authors": [
