--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "vendor/index.js",
     "require": {
-        "firebase/php-jwt": "^6.11"
+        "firebase/php-jwt": "^6.11",
+        "cloudinary/cloudinary_php": "^3.1"
     },
     "autoload": {
         "psr-4": {
